--- a/src/Acme/DemoBundle/Resources/views/Secured/hello.html.twig
+++ b/src/Acme/DemoBundle/Resources/views/Secured/hello.html.twig
@@ -1,8 +1,17 @@
 {% extends "AcmeDemoBundle:Secured:layout.html.twig" %}
 
+
+
 {% block title "Hello " ~ name %}
 
 {% block content %}
+=>
+    {% render(controller('HWIOAuthBundle:Connect:connect')) %}
+    <=
+    
+    =>
+    {{ render(url('hwi_oauth_connect')) }}
+    <=
     <h1 class="title">Hello {{ name }}!</h1>
 
     <a href="{{ path('_demo_secured_hello_admin', { 'name': name }) }}">Hello resource secured for <strong>admin</strong> only.</a>
