--- a/src/Sportacus/CoreBundle/Resources/views/Home/index.html.twig
+++ b/src/Sportacus/CoreBundle/Resources/views/Home/index.html.twig
@@ -1,4 +1,6 @@
 {% extends "SportacusCoreBundle::layout.html.twig" %}
 {% block content %}
-    MON FORM
+    <h1>Suivi de vos mesures</h1>
+	{% include "SportacusCoreBundle:Home:measures.html.twig" %}
+	{{ form(form) }}
 {% endblock %}
