css for jquery ui

--- a/src/Sportacus/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Sportacus/CoreBundle/Resources/views/layout.html.twig
@@ -7,6 +7,10 @@
     <!-- Bootstrap -->
     <link href="{{ asset('css/bootstrap.css') }}" rel="stylesheet" media="screen">
 
+    {% stylesheets 'bundles/sportacuscore/css/*' filter='cssrewrite' output='css/jquery-ui.css' %}
+        <link rel="stylesheet" href="{{ asset_url }}" />
+    {% endstylesheets %}
+    
     <!-- HTML5 Shim and Respond.js add IE8 support of HTML5 elements and media queries -->
     {% include 'BraincraftedBootstrapBundle::ie8-support.html.twig' %}
 
@@ -83,5 +87,8 @@
     <script src="{{ asset('js/jquery.js') }}"></script>
     <!-- Include all JavaScripts, compiled by Assetic -->
     <script src="{{ asset('js/bootstrap.js') }}"></script>
+    
+    {% block js_footer %}
+    {% endblock %}
 </body>
 </html>
