--- a/src/Sportacus/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Sportacus/CoreBundle/Resources/views/layout.html.twig
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
@@ -45,6 +44,17 @@
     {% block jumbotron %}
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
+      {% if app.session.flashbag.peekAll %}
+    <div id="flashes">
+        {% for name, messages in app.session.flashbag.all %}
+            <div class="flash {{ name }}">
+                <div class="wrap">
+                    {{ messages|join(', ') }}
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    {% endif %}
       <div class="container">
       	{% block jumbotronContent %}
         <h1>Hello, world!</h1>
