--- a/src/Sportacus/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Sportacus/CoreBundle/Resources/views/layout.html.twig
@@ -30,7 +30,7 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right btn">
-            <li>Bienvenue {{ app.user.username }}</li>
+            <li>Bienvenue {% if app.user is not null %}{{ app.user.username }}{% endif %}</li>
           </ul>
           
         </div><!--/.navbar-collapse -->
